# specmcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  run_cleanup_push.sh
.github/workflows/: ci.yml  nightly.yml  publish.yml
Open api spec to MCP server/examples/github/: .env.example  README.md
Open api spec to MCP server/examples/petstore/: .env.example  mcp.config.yaml
Open api spec to MCP server/examples/stripe/: .env.example  README.md  mcp.config.yaml
Open api spec to MCP server/scripts/: mcp_client_test.py  test-local.sh
docs/: api-to-mcp-design-v1.md  api-to-mcp-requirements.md  conversion-process 2.md  conversion-process.md  feature-gap-plan-v1.1 2.md  feature-gap-plan-v1.1.md  implementation-plan-v1.md  naming.md  oauth-design-v2.md  oauth-implementation-plan.md  security-review 2.md
examples/github/: mcp.config.yaml
examples/oauth2-example/: mcp.config.yaml
examples/petstore/: README.md
scripts/: fetch_corpus.py  token_store_rotate.py  validate-local.sh
src/specmcp/: __init__.py  __main__.py  config.py  errors.py
src/specmcp/auth/: __init__.py  encryption.py  injector.py  login_nonce.py  oauth2_authcode.py  pkce.py  state.py  token_cache.py  token_store.py
src/specmcp/cli/: __init__.py  app.py  init.py  inspect.py  report_issue.py  serve.py  validate.py
src/specmcp/core/: expose.py  load.py  model.py  normalize.py  simplify.py
src/specmcp/runtime/: __init__.py  dispatcher.py  http_client.py  oauth_handler.py  registry_ref.py  session.py
test-corpus/: jsonplaceholder.json  manifest.yaml  petstore.json
test-corpus/adversarial/: circular-refs.yaml  deep-allof.yaml  missing-operationid.yaml
tests/integration/: test_corpus.py  test_inspect_petstore.py  test_petstore_nightly.py  test_serve_e2e.py
tests/integration/__snapshots__/: test_inspect_petstore.ambr
tests/unit/: test_auth.py  test_config.py  test_dispatcher.py  test_errors.py  test_expose.py  test_http_client.py  test_load.py  test_model.py  test_naming_algorithm.py  test_normalize.py  test_registry_ref.py  test_report_issue.py  test_serve.py  test_simplify.py  test_validate.py
tests/unit/auth/: test_bearer_session.py  test_encryption.py  test_login_nonce.py  test_oauth2.py  test_oauth2_authcode.py  test_pkce.py  test_state.py  test_token_cache.py  test_token_store.py
tests/unit/runtime/: test_auth_code_dispatch.py  test_oauth_e2e.py  test_oauth_handler.py  test_session.py  test_streaming.py
