[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specmcp"
version = "1.4.0"
description = "Convert any OpenAPI spec into a working MCP server — no code required."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "specmcp contributors" }]
keywords = ["mcp", "openapi", "llm", "agents", "api", "proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "prance>=23.6.21",
    "openapi-spec-validator>=0.7.1",
    "ruamel.yaml>=0.18.0",
    "httpx>=0.27.0",
    "jsonschema>=4.22.0",
    "structlog>=24.1.0",
    "anyio>=4.3.0",
    "mcp>=1.0.0,<2.0.0",
    "watchfiles>=0.21",
    "cachetools>=5.3.0",
    "cryptography>=42.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
    "aiosqlite>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/specmcp/specmcp"
Documentation = "https://github.com/specmcp/specmcp/blob/main/README.md"
Repository = "https://github.com/specmcp/specmcp"
"Bug Tracker" = "https://github.com/specmcp/specmcp/issues"
Changelog = "https://github.com/specmcp/specmcp/blob/main/CHANGELOG.md"

[project.scripts]
specmcp = "specmcp.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "syrupy>=4.6.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
    "build>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/specmcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "test-corpus/",
    "examples/",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "corpus: full corpus integration tests (all vendored + fetched specs)",
    "adversarial: adversarial corpus spec tests (edge-case and malformed specs)",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/specmcp"]
